--- a/library_res/src/main/res/values/font_styles.xml
+++ b/library_res/src/main/res/values/font_styles.xml
@@ -1,86 +1,119 @@
 <resources>
 
-    <style name="exchange_text_12_999999">
+    <style name="text_12_999999">
         <item name="android:textColor">#999999</item>
         <item name="android:textSize">12sp</item>
     </style>
 
-    <style name="exchange_text_13_333333">
+    <style name="text_13_333333">
         <item name="android:textColor">#333333</item>
         <item name="android:textSize">13sp</item>
     </style>
 
-    <style name="exchange_text_13_ffffff">
+    <style name="text_13_ffffff">
         <item name="android:textColor">#ffffff</item>
         <item name="android:textSize">13sp</item>
     </style>
 
-    <style name="exchange_text_13_999999">
+    <style name="text_13_999999">
         <item name="android:textColor">#999999</item>
         <item name="android:textSize">13sp</item>
     </style>
 
-    <style name="exchange_text_13_666666">
+    <style name="text_13_666666">
         <item name="android:textColor">#666666</item>
         <item name="android:textSize">13sp</item>
     </style>
 
-    <style name="exchange_text_14_FFFFFF">
+    <style name="text_14_FFFFFF">
         <item name="android:textColor">#FFFFFF</item>
         <item name="android:textSize">14sp</item>
     </style>
 
-    <style name="exchange_text_14_333333">
+    <style name="text_14_333333">
         <item name="android:textColor">#333333</item>
         <item name="android:textSize">14sp</item>
     </style>
 
-    <style name="exchange_text_14_333333_b">
+    <style name="text_14_333333_b">
         <item name="android:textColor">#333333</item>
         <item name="android:textSize">14sp</item>
         <item name="android:textStyle">bold</item>
     </style>
 
-    <style name="exchange_text_14_999999">
+    <style name="text_14_666666">
+        <item name="android:textColor">#666666</item>
+        <item name="android:textSize">14sp</item>
+    </style>
+
+    <style name="text_14_999999">
         <item name="android:textColor">#999999</item>
         <item name="android:textSize">14sp</item>
     </style>
 
-    <style name="exchange_text_15_333333">
+    <style name="text_15_333333">
         <item name="android:textColor">#333333</item>
         <item name="android:textSize">15sp</item>
     </style>
 
-    <style name="exchange_text_15_333333_b">
+    <style name="text_15_333333_b">
         <item name="android:textColor">#333333</item>
         <item name="android:textSize">15sp</item>
         <item name="android:textStyle">bold</item>
     </style>
 
-    <style name="exchange_text_15_666666">
+    <style name="text_15_FF5234_b">
+        <item name="android:textColor">#FF5234</item>
+        <item name="android:textSize">15sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="text_15_FC501C_b">
+        <item name="android:textColor">#FC501C</item>
+        <item name="android:textSize">15sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="text_15_666666">
         <item name="android:textColor">#666666</item>
         <item name="android:textSize">15sp</item>
     </style>
 
-    <style name="exchange_text_15_999999">
+    <style name="text_15_999999">
         <item name="android:textColor">#999999</item>
         <item name="android:textSize">15sp</item>
     </style>
 
-    <style name="exchange_text_15_FFFFFF_b">
+    <style name="text_15_FFFFFF">
+        <item name="android:textColor">#FFFFFF</item>
+        <item name="android:textSize">15sp</item>
+    </style>
+
+    <style name="text_15_FFFFFF_b">
         <item name="android:textColor">#FFFFFF</item>
         <item name="android:textSize">15sp</item>
         <item name="android:textStyle">bold</item>
     </style>
 
-    <style name="exchange_text_15_999999_b">
+    <style name="text_15_999999_b">
         <item name="android:textColor">#999999</item>
         <item name="android:textSize">15sp</item>
         <item name="android:textStyle">bold</item>
     </style>
 
-    <style name="exchange_text_18_666666">
+    <style name="text_18_666666">
         <item name="android:textColor">#666666</item>
         <item name="android:textSize">18sp</item>
+    </style>
+
+    <style name="text_20_FFFFFF_b">
+        <item name="android:textColor">#FFFFFF</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="text_27_FFFFFF">
+        <item name="android:textColor">#FFFFFF</item>
+        <item name="android:textSize">27sp</item>
     </style>
 </resources>
