--- a/module_exchange/src/main/res/layout/exchange_activity_bill_detail.xml
+++ b/module_exchange/src/main/res/layout/exchange_activity_bill_detail.xml
@@ -39,7 +39,7 @@
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/iv_pay_type"
                 android:layout_marginTop="19dp"
-                style="@style/exchange_text_15_333333_b"
+                style="@style/text_15_333333_b"
                 android:text="@{viewModel.payTypeTitle}"
                 />
 
@@ -52,6 +52,7 @@
                 app:layout_constraintTop_toBottomOf="@id/tv_pay_type"
                 android:layout_marginTop="13dp"
                 android:text="@{viewModel.amount}"
+                android:textColor="@{viewModel.amountType ? @color/tx_colore : @color/tx_colorb}"
                 android:textSize="@dimen/tx_size20"
                 />
 
@@ -77,7 +78,7 @@
                 tools:ignore="MissingConstraints"/>
 
         <TextView
-                style="@style/exchange_text_15_999999"
+                style="@style/text_15_999999"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toTopOf="@id/bg_pay_way"
@@ -86,7 +87,7 @@
                 android:text="@string/exchange_payment_method"/>
 
         <TextView
-                style="@style/exchange_text_15_333333_b"
+                style="@style/text_15_333333_b"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toTopOf="@id/bg_pay_way"
@@ -110,7 +111,7 @@
                 tools:ignore="MissingConstraints"/>
 
         <TextView
-                style="@style/exchange_text_15_999999"
+                style="@style/text_15_999999"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toTopOf="@id/bg_other_account"
@@ -119,7 +120,7 @@
                 android:text="@string/exchange_other_account"/>
 
         <TextView
-                style="@style/exchange_text_15_333333_b"
+                style="@style/text_15_333333_b"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toTopOf="@id/bg_other_account"
@@ -143,7 +144,7 @@
                 tools:ignore="MissingConstraints"/>
 
         <TextView
-                style="@style/exchange_text_15_999999"
+                style="@style/text_15_999999"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toTopOf="@id/bg_collection_time"
@@ -152,7 +153,7 @@
                 android:text="@string/exchange_collection_time"/>
 
         <TextView
-                style="@style/exchange_text_15_333333_b"
+                style="@style/text_15_333333_b"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toTopOf="@id/bg_collection_time"
@@ -176,7 +177,7 @@
                 tools:ignore="MissingConstraints"/>
 
         <TextView
-                style="@style/exchange_text_15_999999"
+                style="@style/text_15_999999"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toTopOf="@id/bg_bill_id"
@@ -185,7 +186,7 @@
                 android:text="@string/exchange_order_number"/>
 
         <TextView
-                style="@style/exchange_text_15_333333_b"
+                style="@style/text_15_333333_b"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toTopOf="@id/bg_bill_id"
