--- a/module_exchange/src/main/res/layout/exchange_activity_no_bankcard.xml
+++ b/module_exchange/src/main/res/layout/exchange_activity_no_bankcard.xml
@@ -22,7 +22,7 @@
 
         <TextView
                 android:id="@+id/tv_no_bankcard"
-                style="@style/exchange_text_14_999999"
+                style="@style/text_14_999999"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/exchange_no_bankcard_tips"
