--- a/module_exchange/src/main/res/layout/exchange_activity_rechange_success.xml
+++ b/module_exchange/src/main/res/layout/exchange_activity_rechange_success.xml
@@ -32,7 +32,7 @@
 
         <TextView
                 android:id="@+id/tv_success"
-                style="@style/exchange_text_15_666666"
+                style="@style/text_15_666666"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toBottomOf="@id/iv_success"
@@ -53,7 +53,7 @@
                 android:background="@color/appbg_color_white"/>
 
         <TextView
-                style="@style/exchange_text_14_333333"
+                style="@style/text_14_333333"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toTopOf="@id/bg_pay_way"
@@ -64,7 +64,7 @@
 
         <TextView
                 android:id="@+id/tv_pay_type"
-                style="@style/exchange_text_14_333333"
+                style="@style/text_14_333333"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toTopOf="@id/bg_pay_way"
