--- a/module_exchange/src/main/res/layout/exchange_activity_withdraw.xml
+++ b/module_exchange/src/main/res/layout/exchange_activity_withdraw.xml
@@ -34,7 +34,7 @@
                 />
 
         <TextView
-                style="@style/exchange_text_14_333333_b"
+                style="@style/text_14_333333_b"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toTopOf="@id/bg_receiver_bankcard"
@@ -58,7 +58,7 @@
 
         <TextView
                 android:id="@+id/tv_bankcard"
-                style="@style/exchange_text_14_333333"
+                style="@style/text_14_333333"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintBottom_toBottomOf="@id/bg_receiver_bankcard"
@@ -98,7 +98,7 @@
 
         <TextView
                 android:id="@+id/tv_amount_title"
-                style="@style/exchange_text_14_333333_b"
+                style="@style/text_14_333333_b"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toTopOf="@id/bg_amount"
@@ -110,7 +110,7 @@
 
         <EditText
                 android:id="@+id/et_amount"
-                style="@style/exchange_text_14_333333"
+                style="@style/text_14_333333"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 app:layout_constraintBottom_toBottomOf="@id/bg_amount"
