--- a/module_exchange/src/main/res/layout/exchange_item_bankcard_list.xml
+++ b/module_exchange/src/main/res/layout/exchange_item_bankcard_list.xml
@@ -44,7 +44,7 @@
 
         <TextView
                 android:id="@+id/tv_bankname"
-                style="@style/exchange_text_18_666666"
+                style="@style/text_18_666666"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toTopOf="parent"
@@ -56,7 +56,7 @@
 
         <TextView
                 android:id="@+id/tv_card_type"
-                style="@style/exchange_text_14_FFFFFF"
+                style="@style/text_14_FFFFFF"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintLeft_toLeftOf="@id/tv_bankname"
@@ -66,7 +66,7 @@
                 />
 
         <TextView
-                style="@style/exchange_text_14_FFFFFF"
+                style="@style/text_14_FFFFFF"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintLeft_toLeftOf="@id/tv_bankname"
