--- a/module_exchange/src/main/res/values/styles.xml
+++ b/module_exchange/src/main/res/values/styles.xml
@@ -17,7 +17,7 @@
         <item name="android:background">@color/appbg_color_white</item>
     </style>
 
-    <style name="exchange_btn_confirm" parent="exchange_text_15_FFFFFF_b">
+    <style name="exchange_btn_confirm" parent="text_15_FFFFFF_b">
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">0dp</item>
         <item name="layout_constraintDimensionRatio">327:40</item>
