--- a/module_system/src/main/res/layout/system_activity_entrance.xml
+++ b/module_system/src/main/res/layout/system_activity_entrance.xml
@@ -1,26 +1,218 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
         <variable
-            name="viewModel"
-            type="me.goldze.mvvmhabit.base.BaseViewModel" />
+                name="viewModel"
+                type="com.lcworld.module_system.viewmodel.ToolEntranceViewModel"/>
     </data>
 
     <android.support.constraint.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#FaFaFa"
-        android:orientation="vertical">
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            >
+
+        <include
+                android:id="@+id/layout_title"
+                layout="@layout/system_layout_title"/>
+
+        <android.support.constraint.Guideline
+                android:id="@+id/guideline1"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:orientation="vertical"
+                app:layout_constraintGuide_begin="@dimen/gap_size17"/>
+
+        <android.support.constraint.Guideline
+                android:id="@+id/guideline2"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:orientation="vertical"
+                app:layout_constraintGuide_end="@dimen/gap_size16"/>
+        <!--分享邀请-->
+        <View
+                android:id="@+id/bg_share"
+                style="@style/system_item_bg"
+                android:layout_marginTop="@dimen/gap_size7"
+                app:layout_constraintTop_toBottomOf="@id/layout_title"
+                app:onClickCommand="@{viewModel.shareOnClickCommand}"
+                tools:ignore="MissingConstraints"/>
+
+        <ImageView
+                android:id="@+id/iv_share"
+                android:layout_width="wrap_content"
+                android:src="@mipmap/system_share"
+                android:layout_height="wrap_content"
+                app:layout_constraintBottom_toBottomOf="@id/bg_share"
+                app:layout_constraintStart_toStartOf="@id/guideline1"
+                app:layout_constraintTop_toTopOf="@id/bg_share"
+                android:contentDescription="@string/image_description_default"/>
 
         <TextView
-            android:layout_width="wrap_content"
-            android:text="工具"
-            android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+                android:id="@+id/tv_share"
+                android:layout_width="wrap_content"
+                style="@style/text_15_333333_b"
+                android:text="@string/system_share"
+                android:layout_marginStart="@dimen/gap_size11"
+                android:layout_height="wrap_content"
+                app:layout_constraintBottom_toBottomOf="@id/bg_share"
+                app:layout_constraintStart_toEndOf="@id/iv_share"
+                app:layout_constraintTop_toTopOf="@id/bg_share"/>
+
+        <ImageView
+                android:layout_width="wrap_content"
+                android:src="@mipmap/arrow_right2"
+                android:layout_height="wrap_content"
+                app:layout_constraintBottom_toBottomOf="@id/bg_share"
+                app:layout_constraintEnd_toEndOf="@id/guideline2"
+                app:layout_constraintTop_toTopOf="@id/bg_share"
+                android:contentDescription="@string/image_description_default"/>
+
+        <View
+                android:layout_width="0dp"
+                android:background="@color/line_colorc"
+                android:layout_height="1px"
+                app:layout_constraintBottom_toBottomOf="@id/bg_share"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="@id/tv_share"/>
+        <!--常见问题-->
+        <View
+                android:id="@+id/bg_question"
+                style="@style/system_item_bg"
+                app:layout_constraintTop_toBottomOf="@id/bg_share"
+                app:onClickCommand="@{viewModel.questionOnClickCommand}"
+                tools:ignore="MissingConstraints"/>
+
+        <ImageView
+                android:id="@+id/iv_question"
+                android:layout_width="wrap_content"
+                android:src="@mipmap/system_question"
+                android:layout_height="wrap_content"
+                app:layout_constraintBottom_toBottomOf="@id/bg_question"
+                app:layout_constraintStart_toStartOf="@id/guideline1"
+                app:layout_constraintTop_toTopOf="@id/bg_question"
+                android:contentDescription="@string/image_description_default"/>
+
+        <TextView
+                android:id="@+id/tv_question"
+                android:layout_width="wrap_content"
+                style="@style/text_15_333333_b"
+                android:text="@string/system_question"
+                android:layout_marginStart="@dimen/gap_size11"
+                android:layout_height="wrap_content"
+                app:layout_constraintBottom_toBottomOf="@id/bg_question"
+                app:layout_constraintStart_toEndOf="@id/iv_question"
+                app:layout_constraintTop_toTopOf="@id/bg_question"/>
+
+        <ImageView
+                android:layout_width="wrap_content"
+                android:src="@mipmap/arrow_right2"
+                android:layout_height="wrap_content"
+                app:layout_constraintBottom_toBottomOf="@id/bg_question"
+                app:layout_constraintEnd_toEndOf="@id/guideline2"
+                app:layout_constraintTop_toTopOf="@id/bg_question"
+                android:contentDescription="@string/image_description_default"/>
+
+        <View
+                android:layout_width="0dp"
+                android:background="@color/line_colorc"
+                android:layout_height="1px"
+                app:layout_constraintBottom_toBottomOf="@id/bg_question"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="@id/tv_question"/>
+        <!--意见反馈-->
+        <View
+                android:id="@+id/bg_feedback"
+                style="@style/system_item_bg"
+                app:layout_constraintTop_toBottomOf="@id/bg_question"
+                app:onClickCommand="@{viewModel.feedbackOnClickCommand}"
+                tools:ignore="MissingConstraints"/>
+
+        <ImageView
+                android:id="@+id/iv_feedback"
+                android:layout_width="wrap_content"
+                android:src="@mipmap/system_feedback"
+                android:layout_height="wrap_content"
+                app:layout_constraintBottom_toBottomOf="@id/bg_feedback"
+                app:layout_constraintStart_toStartOf="@id/guideline1"
+                app:layout_constraintTop_toTopOf="@id/bg_feedback"
+                android:contentDescription="@string/image_description_default"/>
+
+        <TextView
+                android:id="@+id/tv_feedback"
+                android:layout_width="wrap_content"
+                style="@style/text_15_333333_b"
+                android:text="@string/system_feedback"
+                android:layout_marginStart="@dimen/gap_size11"
+                android:layout_height="wrap_content"
+                app:layout_constraintBottom_toBottomOf="@id/bg_feedback"
+                app:layout_constraintStart_toEndOf="@id/iv_feedback"
+                app:layout_constraintTop_toTopOf="@id/bg_feedback"/>
+
+        <ImageView
+                android:layout_width="wrap_content"
+                android:src="@mipmap/arrow_right2"
+                android:layout_height="wrap_content"
+                app:layout_constraintBottom_toBottomOf="@id/bg_feedback"
+                app:layout_constraintEnd_toEndOf="@id/guideline2"
+                app:layout_constraintTop_toTopOf="@id/bg_feedback"
+                android:contentDescription="@string/image_description_default"/>
+
+        <View
+                android:layout_width="0dp"
+                android:background="@color/line_colorc"
+                android:layout_height="1px"
+                app:layout_constraintBottom_toBottomOf="@id/bg_feedback"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="@id/tv_feedback"/>
+        <!--关于我们-->
+        <View
+                android:id="@+id/bg_about_us"
+                style="@style/system_item_bg"
+                app:layout_constraintTop_toBottomOf="@id/bg_feedback"
+                app:onClickCommand="@{viewModel.aboutUsOnClickCommand}"
+                tools:ignore="MissingConstraints"/>
+
+        <ImageView
+                android:id="@+id/iv_about_us"
+                android:layout_width="wrap_content"
+                android:src="@mipmap/system_about_us"
+                android:layout_height="wrap_content"
+                app:layout_constraintBottom_toBottomOf="@id/bg_about_us"
+                app:layout_constraintStart_toStartOf="@id/guideline1"
+                app:layout_constraintTop_toTopOf="@id/bg_about_us"
+                android:contentDescription="@string/image_description_default"/>
+
+        <TextView
+                android:id="@+id/tv_about_us"
+                android:layout_width="wrap_content"
+                style="@style/text_15_333333_b"
+                android:text="@string/system_about_us"
+                android:layout_marginStart="@dimen/gap_size11"
+                android:layout_height="wrap_content"
+                app:layout_constraintBottom_toBottomOf="@id/bg_about_us"
+                app:layout_constraintStart_toEndOf="@id/iv_about_us"
+                app:layout_constraintTop_toTopOf="@id/bg_about_us"/>
+
+        <ImageView
+                android:layout_width="wrap_content"
+                android:src="@mipmap/arrow_right2"
+                android:layout_height="wrap_content"
+                app:layout_constraintBottom_toBottomOf="@id/bg_about_us"
+                app:layout_constraintEnd_toEndOf="@id/guideline2"
+                app:layout_constraintTop_toTopOf="@id/bg_about_us"
+                android:contentDescription="@string/image_description_default"/>
+
+        <View
+                android:layout_width="0dp"
+                android:background="@color/line_colorc"
+                android:layout_height="1px"
+                app:layout_constraintBottom_toBottomOf="@id/bg_about_us"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="@id/tv_about_us"/>
+
     </android.support.constraint.ConstraintLayout>
 </layout>
