接口调试： 自由购、展示列表切换

--- a/module_home/src/main/res/layout/home_activity_search_goodsresult.xml
+++ b/module_home/src/main/res/layout/home_activity_search_goodsresult.xml
@@ -47,8 +47,8 @@
                 android:background="@drawable/home_shape_searchbox_bg2"
                 app:layout_constraintWidth_percent="0.77"
                 app:layout_constraintDimensionRatio="277:27"
-                app:layout_constraintEnd_toStartOf="@id/cbox_displaymode"
-                app:layout_constraintStart_toEndOf="@id/iv_back"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"/>
 
         <TextView
