--- a/module_home/src/main/res/layout/home_activity_goodslist_hotsale.xml
+++ b/module_home/src/main/res/layout/home_activity_goodslist_hotsale.xml
@@ -1,58 +1,153 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/white">
 
-    <android.support.constraint.Guideline
-        android:id="@+id/gline_start"
-        android:layout_width="wrap_content"
-        android:orientation="vertical"
-        android:layout_height="wrap_content"
-        app:layout_constraintGuide_begin="@dimen/gap_size12" />
+<layout>
+    <data>
+        <variable name="viewModel" type="com.lcworld.module_home.viewmodel.SearchGoodsResultViewModel"/>
+    </data>
 
-    <android.support.constraint.Guideline
-        android:id="@+id/gline_end"
-        android:layout_width="wrap_content"
-        android:orientation="vertical"
-        android:layout_height="wrap_content"
-        app:layout_constraintGuide_end="@dimen/gap_size10" />
+    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
+                                                 xmlns:tools="http://schemas.android.com/tools"
+                                                 android:layout_width="match_parent"
+                                                 android:layout_height="match_parent"
+                                                 android:background="@color/white">
 
-    <!--标题-->
-    <com.qmuiteam.qmui.widget.QMUITopBarLayout
-        android:id="@+id/qmui_topbar"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <android.support.constraint.Guideline
+                android:id="@+id/gline_start"
+                android:layout_width="wrap_content"
+                android:orientation="vertical"
+                android:layout_height="wrap_content"
+                app:layout_constraintGuide_begin="@dimen/gap_size12"/>
 
-    <!--筛选项-->
-    <android.support.constraint.ConstraintLayout
-        android:id="@+id/clayout_filtrate"
-        android:layout_width="0dp"
-        android:layout_marginTop="@dimen/gap_size20"
-        android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/qmui_topbar">
+        <android.support.constraint.Guideline
+                android:id="@+id/gline_end"
+                android:layout_width="wrap_content"
+                android:orientation="vertical"
+                android:layout_height="wrap_content"
+                app:layout_constraintGuide_end="@dimen/gap_size10"/>
 
-        <include layout="@layout/home_layout_filtrate" />
+        <!--标题-->
+        <ImageView
+                android:id="@+id/iv_back"
+                android:src="@mipmap/home_title_back"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                app:onClickCommand="@{viewModel.clickBack}"
+                android:paddingStart="@dimen/gap_size13"
+                android:paddingEnd="@dimen/gap_size20"
+                app:layout_constraintBottom_toBottomOf="@id/tv_title"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@id/tv_title"/>
+
+        <TextView
+                android:id="@+id/tv_title"
+                android:layout_width="0dp"
+                android:layout_height="@dimen/title_height"
+                android:text="@string/home_hotsale"
+                android:textSize="@dimen/tx_size15"
+                android:gravity="center"
+                android:textColor="@color/tx_colorb"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"/>
+
+        <CheckBox
+                android:id="@+id/cbox_displaymode"
+                android:button="@drawable/home_selector_switchdisplay"
+                android:paddingEnd="@dimen/gap_size13"
+                android:layout_width="wrap_content"
+                android:checked="@={viewModel.checkStatusDisplayMode}"
+                android:layout_height="0dp"
+                app:layout_constraintBottom_toBottomOf="@id/tv_title"
+                app:layout_constraintTop_toTopOf="@id/tv_title"
+                app:layout_constraintEnd_toEndOf="parent"/>
+
+        <!--筛选项-->
+        <android.support.constraint.ConstraintLayout
+                android:id="@+id/clayout_filtrate"
+                android:layout_width="0dp"
+                android:layout_marginTop="@dimen/gap_size6"
+                android:layout_height="wrap_content"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tv_title">
+
+            <CheckBox
+                    android:id="@+id/cbox_filtrate_recom"
+                    android:layout_width="wrap_content"
+                    android:layout_marginStart="@dimen/gap_size20"
+                    android:drawablePadding="@dimen/gap_size4"
+                    android:text="@string/home_filtrate_recommend"
+                    android:textColor="@drawable/selector_txcolor_a"
+                    android:textSize="@dimen/tx_size14"
+                    android:checked="@={viewModel.checkStatusRecom}"
+                    app:onClickCommand="@{viewModel.clickRecom}"
+                    android:button="@null"
+                    android:drawableEnd="@drawable/selector_cbox_b"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toStartOf="@id/cbox_filtrate_sales"
+                    app:layout_constraintHorizontal_chainStyle="spread_inside"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"/>
+
+            <CheckBox
+                    android:id="@+id/cbox_filtrate_sales"
+                    android:layout_width="wrap_content"
+                    android:layout_marginStart="@dimen/gap_size20"
+                    android:drawablePadding="@dimen/gap_size4"
+                    android:text="@string/home_filtrate_sales"
+                    android:textColor="@drawable/selector_txcolor_a"
+                    android:textSize="@dimen/tx_size14"
+                    android:button="@null"
+                    android:checked="@={viewModel.checkStatusSalesVolume}"
+                    app:onClickCommand="@{viewModel.clickSalesVolume}"
+                    android:drawableEnd="@drawable/selector_cbox_b"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toStartOf="@id/cbox_filtrate_price"
+                    app:layout_constraintStart_toEndOf="@id/cbox_filtrate_recom"
+                    app:layout_constraintTop_toTopOf="parent"/>
+
+            <CheckBox
+                    android:id="@+id/cbox_filtrate_price"
+                    android:layout_width="wrap_content"
+                    android:layout_marginStart="@dimen/gap_size20"
+                    android:drawablePadding="@dimen/gap_size4"
+                    android:text="@string/home_filtrate_price"
+                    android:textColor="@drawable/selector_txcolor_a"
+                    android:textSize="@dimen/tx_size14"
+                    android:checked="@={viewModel.checkStatusPrice}"
+                    app:onClickCommand="@{viewModel.clickPrice}"
+                    android:button="@null"
+                    android:drawableEnd="@drawable/selector_cbox_b"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginEnd="@dimen/gap_size13"
+                    app:layout_constraintStart_toEndOf="@id/cbox_filtrate_sales"
+                    app:layout_constraintTop_toTopOf="parent"/>
+        </android.support.constraint.ConstraintLayout>
+
+        <!--列表-->
+        <android.support.v4.widget.SwipeRefreshLayout
+                android:id="@+id/swipeLayout"
+                android:layout_width="0dp"
+                android:layout_marginTop="@dimen/gap_size17"
+                android:layout_height="0dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="@id/gline_end"
+                app:layout_constraintStart_toStartOf="@id/gline_start"
+                android:layout_marginBottom="@dimen/gap_size10"
+                app:layout_constraintTop_toBottomOf="@id/clayout_filtrate">
+            <android.support.v7.widget.RecyclerView
+                    android:id="@+id/rv_goods"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    tools:layoutManager="GridLayoutManager"
+                    tools:listitem="@layout/home_item_goods_grid"
+                    tools:spanCount="2"/>
+        </android.support.v4.widget.SwipeRefreshLayout>
+
     </android.support.constraint.ConstraintLayout>
-
-    <!--列表-->
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_goods"
-        android:layout_width="0dp"
-        android:layout_marginTop="@dimen/gap_size17"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@id/gline_end"
-        app:layout_constraintStart_toStartOf="@id/gline_start"
-        app:layout_constraintTop_toBottomOf="@id/clayout_filtrate"
-        tools:layoutManager="GridLayoutManager"
-        tools:listitem="@layout/home_item_goods_grid"
-        tools:spanCount="2" />
-</android.support.constraint.ConstraintLayout>
+</layout>
