--- a/module_exchange/src/main/res/layout/exchange_activity_bill_list.xml
+++ b/module_exchange/src/main/res/layout/exchange_activity_bill_list.xml
@@ -41,16 +41,18 @@
                 app:layout_constraintTop_toBottomOf="@id/tv_date"
                 android:text="@{viewModel.totalIncome}"/>
 
-        <android.support.v7.widget.RecyclerView
-                android:id="@+id/recycler"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+        <android.support.v4.widget.SwipeRefreshLayout
+                android:id="@+id/swipeLayout"
                 app:layout_constraintTop_toBottomOf="@id/tv_total"
                 android:layout_marginTop="@dimen/gap_size16"
-                app:items="@{viewModel.observableList}"
-                app:adapter="@{viewModel.adapter}"
-                app:itemBinding="@{viewModel.itemBinding}"
-                app:layoutManager="android.support.v7.widget.LinearLayoutManager"
-                />
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+            <android.support.v7.widget.RecyclerView
+                    android:id="@+id/recycler"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+            />
+        </android.support.v4.widget.SwipeRefreshLayout>
     </android.support.constraint.ConstraintLayout>
 </layout>
